@@ -1,6 +1,6 @@
 name    = WWW-DanDomain
 author  = Jonas B. Nielsen (jonasbn) <jonasbn@cpan.org>
-license = Artistic_1_0
+license = Artistic_2_0
 copyright_holder = Jonas B. Nielsen
 
 [@Basic]
